Make tabs focusable and add focus ring

This allows tabs to be reached by the keyboard. Only tabs are made
focusable, not the tab close buttons since tabs can
be easily closed from the context menu.

This also makes the tabstrip as an accessible pane so it can be
reached by F6 and SHIFT+F6.

Follow-up changes:
- Look into having CTRL+W close the focused tab rather than the
  active tab when in keyboard accessibility mode.
- Make keyboard focus advance to the next tab when closing the
  focused tab (rather than disappearing as it does now).

Bug: 702414
Change-Id: I052ac56a6adfbc317a67c00314fd9259ab83fc2e
Reviewed-on: https://chromium-review.googlesource.com/c/1241845
Commit-Queue: Collin Baker <collinbaker@chromium.org>
Reviewed-by: Peter Boström <pbos@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599795}