chrome/browser/ui/views/tabs/tab_style.cc
@@ -24,6 +24,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/base/theme_provider.h"
 #include "ui/gfx/canvas.h"
 #include "ui/gfx/scoped_canvas.h"
+#include "ui/views/style/platform_style.h"
 #include "ui/views/widget/widget.h"
 
 namespace {
@@ -278,6 +279,16 @@ gfx::Path GM2TabStyle::GetPath(PathType path_type,
   if (path_type == PathType::kInteriorClip) {
     // Clip path is a simple rectangle.
     path.addRect(tab_left, tab_top, tab_right, tab_bottom);
+  } else if (path_type == PathType::kHighlight) {
+    // The path is a round rect inset by the focus ring thickness. The
+    // radius is also adjusted by the inset.
+    const float inset = views::PlatformStyle::kFocusHaloThickness +
+                        views::PlatformStyle::kFocusHaloInset;
+    SkRRect rrect = SkRRect::MakeRectXY(
+        SkRect::MakeLTRB(tab_left + inset, tab_top + inset, tab_right - inset,
+                         tab_bottom - inset),
+        radius - inset, radius - inset);
+    path.addRRect(rrect);
   } else {
     // We will go clockwise from the lower left. We start in the overlap region,
     // preventing a gap between toolbar and tabstrip.
